# LightFieldImaging

./: .gitignore  LICENSE  README.md
lightfield_viewer/: .clang-format  .gitmodules  CMakeLists.txt  README.md
lightfield_viewer/data/scripts/: imgmatrix.py  issue.py
lightfield_viewer/data/shaders/: lightfield.frag  lightfield.vert
lightfield_viewer/ext/gl3w/: Makefile
lightfield_viewer/ext/imgui/: imconfig.h
lightfield_viewer/include/framework/opengl/: buffermanager.h  compiler.h  ebomanager.h  framebuffermanager.h  programmanager.h  semantics.h  shadermanager.h  texturemanager.h  vaomanager.h  vertex.h
lightfield_viewer/include/imgui/: imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_impl_vulkan.h  imgui_style.h
lightfield_viewer/include/lightfield/: lightfield.h
lightfield_viewer/include/qulkan/: handlemanager.h  inputshandler.h  logger.h  render_view.h  utils.h  windows.h
lightfield_viewer/include/utils/: pngwriter.h
lightfield_viewer/src/: main.cpp
lightfield_viewer/src/framework/opengl/: compiler.cpp
lightfield_viewer/src/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_vulkan.cpp
lightfield_viewer/src/lightfield/: lightfield.cpp
lightfield_viewer/src/qulkan/: inputshandler.cpp  render_view.cpp  utils.cpp  windows.cpp
lightfield_viewer/src/utils/: pngwriter.cpp  stb_image.cpp
